# basecode

doc/: analise_01.ipynb  app.py  base.py  (+48 more)
doc/sm/: Dockerfile  batch-transform-containers.html  links.txt  pyproject.toml  requirements.txt  serve  triton-python-backend.html
doc/sm/app/byoc/: app.py  config.py  inference.py  logging.py  model_handler.py  s3io.py  schemas.py
doc/sm/app/byoc/models/mrm2026/: model.py  preprocess.py
doc/sm/app/byoc/models/mrm_dsa/: __init__.py  model.py  preprocess.py
doc/sm/app/pt2/: Dockerfile  README.md  main.py  predictor.py  requirements.txt  s3_utils.py
doc/sm/app/pytorch/: README.md  inference.py  requirements.txt  s3_utils.py
doc/sm/app/triton_aws/: Dockerfile  README.md
doc/sm/app/triton_aws/deploy/: buildspec.yml
doc/sm/app/triton_aws/model_repository/classifier/: config.pbtxt
doc/sm/app/triton_aws/model_repository/pipeline/: config.pbtxt
doc/sm/app/triton_aws/model_repository/postprocess/: config.pbtxt
doc/sm/app/triton_aws/model_repository/postprocess/1/: model.py
doc/sm/app/triton_aws/model_repository/preprocess/: config.pbtxt
doc/sm/metadata/: metadata.jsonl  metadata.jsonl.out  metadata_pytorch_script.jsonl.out  metadata_triton_aws.jsonl  metadata_triton_aws.jsonl.out
doc/sm/notebooks/: invocation_onnx.ipynb  invocation_pytorch.ipynb  invocation_triton_aws.ipynb  model_training_base.ipynb  model_training_onnx_sm.ipynb  model_training_pt.ipynb  model_training_pt_sm.ipynb
doc/sm/src/: config.py  logger.py  main.py  model_loader.py
doc/sm/src/app/: __init__.py  handler.py  routes.py  transforms.py
(+24 files in other folders)
