[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inference-server"
version = "0.1.0"
description = "AWS SageMaker Batch Transform inference server for PyTorch image models"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "torchvision==0.18.1",
    "Pillow==10.3.0",
    "numpy==1.26.4",
    "python-multipart==0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "httpx==0.27.0",
    "pytest-mock==3.14.0",
]
